<resources>
    <string name="app_name">GETAC</string>
    <string name="title_reform">Reformar</string>
    <string name="title_glossary">Glossário</string>
    <string name="title_home">Home</string>
    <string name="title_search">Buscar</string>
    <string name="search_fragment_title">Principais categorias de produtos</string>
    <string name="search_results"># resultados para " "</string>
    <string name="hint_search_product">Pesquise produtos ou categorias</string>
    <string name="hint_search_reform">Pesquise reformas ou categorias</string>
    <string name="title_account">Conta</string>
    <string name="app_logo_desc">Logo do aplicativo</string>
    <string name="home_hscroll1_title">Título 1</string>
    <string name="home_hscroll1_subtitle">Subtítulo 1</string>
    <string name="home_hscroll2_title">Título 2</string>
    <string name="home_hscroll2_subtitle">Subtítulo 2</string>
    <string name="store_card_name">Nome do estabelecimento</string>
    <string name="store_card_location">Nome da rua - Cidade</string>
    <string name="store_card_rating">4.8 \u2605 (99+)</string>
    <string name="store_rating_placeholder" formatted="true">1$d \u2605 (99+)</string>
    <string name="store_info_store">Informações do estabelecimento</string>
    <string name="store_info_button">Mais informações</string>
    <string name="store_product_disp">Produtos disponíveis</string>
    <string name="product_card_name">Nome do produto</string>
    <string name="product_img_desc">Imagem do produto</string>
    <string name="product_price_default">Por apenas R$ por unidade</string>
    <string name="product_price_placeholder" formatted="true">Por apenas R$ $d1 por $s2</string>
    <string name="product_store_default">Fornecido por: nome do estabelecimento</string>
    <string name="product_store_placeholder" formatted="true">Fornecido por: $s1</string>
    <string name="user_img_desc">Foto do usuário</string>
    <string name="camera_btn_desc">Botão para trocar a foto do usuário</string>
    <string name="user_name">Nome do usuário</string>
    <string name="user_email">example@email.com</string>
    <string name="user_info_btn_icon_desc">Ícone de informações do usuário</string>
    <string name="user_pass_btn_icon_desc">Ícone de senha do usuário</string>
    <string name="faq_btn_icon_desc">Ícone de perguntas frequentes</string>
    <string name="help_btn_icon_desc">Ícone de ajuda</string>
    <string name="user_info_btn_title">Perfil</string>
    <string name="user_info_btn_subtitle">Alterar suas informações pessoais</string>
    <string name="user_pass_btn_title">Senha</string>
    <string name="user_pass_btn_subtitle">Alterar sua senha atual</string>
    <string name="faq_btn_title">FAQ</string>
    <string name="faq_btn_subtitle">Respostas às perguntas frequentes</string>
    <string name="help_btn_title">Ajuda</string>
    <string name="help_btn_subtitle">Instruções de uso, fale conosco e termos do aplicativo</string>
    <string name="edit_name_hint">Nome</string>
    <string name="edit_lastname_hint">Sobrenome</string>
    <string name="edit_phone_hint">Número de telefone</string>
    <string name="edit_email_hint">Endereço de e-mail</string>
    <string name="btn_save_changes">Salvar</string>
    <string name="login_forgot_button"><u>Esqueceu sua senha?</u></string>
    <string name="login_button">Login</string>
    <string name="login_google_button">Entrar com o Google</string>
    <string name="login_title">Seja bem\nvindo de volta</string>
    <string name="login_email_hint">Email</string>
    <string name="login_pass_hint">Senha</string>
    <string name="login_register_info">Novo por aqui ou quer usar outro e-mail?</string>
    <string name="login_register_button"><u>Registre-se</u></string>
    <string name="register_login_button"><u>Já possuo cadastro</u></string>
    <string name="register_link_divisor">e a</string>
    <string name="register_terms_button"><u>Termos de uso</u></string>
    <string name="register_policy_button"><u>Política de Privacidade</u></string>
    <string name="register_terms_text">Ao se registrar, você concorda com os</string>
    <string name="register_button">REGISTRAR</string>
    <string name="register_confirm_pass_hint">Confirme sua senha</string>
    <string name="register_pass_hint">Senha</string>
    <string name="register_email_hint">Email</string>
    <string name="register_name_hint">Nome</string>
    <string name="register_subtitle">Por favor, preencha os campos abaixo.\nEsperamos que goste do app :)</string>
    <string name="register_title">Olá!</string>
    <string name="old_password_hint">Senha atual</string>
    <string name="edit_password_hint">Nova senha</string>
    <string name="edit_password_confirm_hint">Confirme a nova senha</string>
    <string name="btn_save_password">Alterar senha</string>
    <string name="set_theme_title">Tema escuro</string>
    <string name="set_theme_desc">Quando ligado, alterna para o tema escuro do aplicativo.</string>
    <string name="set_notifications_title">Notificações</string>
    <string name="set_notifications_desc">Ligue se deseja receber notificações do aplicativo.</string>
    <string name="measurement_unit_title">Unidade de medida</string>
    <string name="measurement_unit_op1">Metros</string>
    <string name="measurement_unit_op2">Jarda</string>
    <string name="measurement_unit_op3">Pé</string>
    <string name="measurement_unit_op4">Polegada</string>
    <string name="account_rate_title">AVALIE NOSSO APP</string>
    <string name="account_rate_subtitle">Você não sabe como isso nos ajuda!</string>
    <string name="reform_category_image_desc">Foto que representa a categoria</string>
    <string name="reform_category_name">Categoria</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reform_title">Nome da reforma</string>
    <string name="reform_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent semper facilisis ornare. Nullam eros erat, venenatis eu nisl ac, consectetur sollicitudin nisl. Nunc id risus lobortis, dictum massa id, dignissim mauris. Nullam molestie lorem nec velit viverra congue.</string>
    <string name="reform_img_desc">Imagem mostrando a reforma</string>
    <string name="reform_image_subtitle">Legenda da imagem</string>
    <string name="reform_form_title">Reformar</string>
    <string name="btn_calculate">Calcular</string>
    <string name="reform_form_field1">Altura</string>
    <string name="reform_form_field2">Largura</string>
    <string name="reform_form_field3">Comprimento</string>
    <string name="favorite_store_name">Nome do Estabelecimento</string>
    <string name="favorite_store_adress">Av. Nome da avenida, 777 - Cidade</string>
    <string name="favorite_store_rating">4,7 \u2605 (99+)</string>
    <string name="trending_product_position">0</string>
    <string name="trending_product_img_desc">Imagem do produto em alta</string>
    <string name="trending_product_name">Nome do Produto</string>
    <string name="trending_product_price">R$ 10.00 por Kg</string>
    <string name="trending_product_store">Nome do Estabelecimento</string>
    <string name="trending_product_store_rating">4,7 ★ (99+)</string>
    <string name="premium" > PREMIUM </string>
    <string name="compre_ja">Compre já</string>
    <string name="dez_moedas">$10</string>
    <string name="about_gold_desc">barras de ouro</string>
    <string name="about_back_button">botao de voltar</string>
    <string name="img_wave">detalhe de onda layout</string>
    <string name="premium_advantage">Descrição de vantagem que o premium oferece ao assinante</string>
    <string name="advantage_title">Título</string>
    <string name="img_advantage" />

</resources>
