<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_reform"
        android:icon="@drawable/ic_reform_24dp"
        android:title="@string/title_reform" />

    <item
        android:id="@+id/nav_glossary"
        android:icon="@drawable/ic_glossary_24dp"
        android:title="@string/title_glossary" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account_24dp"
        android:title="@string/title_account" />

</menu>
