<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_reform"
        android:name="com.ibuild.getac.ui.ReformFragment"
        android:label="@string/title_reform"
        tools:layout="@layout/fragment_reform" />

    <fragment
        android:id="@+id/nav_glossary"
        android:name="com.ibuild.getac.ui.GlossaryFragment"
        android:label="@string/title_glossary"
        tools:layout="@layout/fragment_glossary" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ibuild.getac.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.ibuild.getac.ui.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.ibuild.getac.ui.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>
