<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditAccountActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/userImg"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@drawable/circular_shape"
            android:backgroundTint="#999999"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_account_24dp"
            android:contentDescription="@string/user_img_desc"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/cameraBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circular_shape"
            android:contentDescription="@string/camera_btn_desc"
            android:src="@drawable/ic_camera_24dp"
            android:layout_alignBottom="@id/userImg"
            android:layout_alignEnd="@id/userImg"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFAAAAAA"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/btnAccountInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_info_btn_icon_desc"
            android:paddingTop="3dp"
            android:src="@drawable/ic_user_32dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_btn_title"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_btn_subtitle"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnAccountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_pass_btn_icon_desc"
            android:paddingTop="3dp"
            android:src="@drawable/ic_password_32dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_pass_btn_title"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_pass_btn_subtitle"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnFAQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/faq_btn_icon_desc"
            android:paddingTop="3dp"
            android:src="@drawable/ic_faq_32dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_btn_title"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_btn_subtitle"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/help_btn_icon_desc"
            android:paddingTop="3dp"
            android:src="@drawable/ic_help_32dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_btn_title"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_btn_subtitle"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>