<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="6dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="4dp"
    app:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/productImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_img_desc"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/imgplaceholder" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_card_name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/product_price_default" />

        <TextView
            android:id="@+id/productStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_store_default" />

    </LinearLayout>

</androidx.cardview.widget.CardView>