<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgProductReformManual"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/trending_product_img_desc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/txtProductNameReformManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/trending_product_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtProductPriceReformManual"
        app:layout_constraintStart_toEndOf="@+id/imgProductReformManual"
        app:layout_constraintTop_toTopOf="@+id/imgProductReformManual"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/txtProductPriceReformManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trending_product_price"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtProductStoreReformManual"
        app:layout_constraintStart_toStartOf="@+id/txtProductNameReformManual"
        app:layout_constraintTop_toBottomOf="@+id/txtProductNameReformManual" />

    <TextView
        android:id="@+id/txtProductStoreReformManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/trending_product_store"
        app:layout_constraintBottom_toTopOf="@+id/txtProductStoreRatingReformManual"
        app:layout_constraintStart_toStartOf="@+id/txtProductNameReformManual"
        app:layout_constraintTop_toBottomOf="@+id/txtProductPriceReformManual" />

    <TextView
        android:id="@+id/txtProductStoreRatingReformManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trending_product_store_rating"
        app:layout_constraintBottom_toBottomOf="@+id/imgProductReformManual"
        app:layout_constraintStart_toStartOf="@+id/txtProductNameReformManual"
        app:layout_constraintTop_toBottomOf="@+id/txtProductStoreReformManual" />
</androidx.constraintlayout.widget.ConstraintLayout>