<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/homeCarousel"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:fillColor="@color/fakeWhite"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp"/>

        <TextView
            android:id="@+id/hscroll1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_hscroll1_title"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/hcroll1Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_hscroll1_subtitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hscroll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/hscroll2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_hscroll2_title"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/hscroll2Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_hscroll2_subtitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hscroll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp" />
    </LinearLayout>
</ScrollView>